# emodule-elivehelper

./: .gitignore  Makefile.am  README  configure.ac  elivehelper.edc  elivehelpers.edc  module.desktop.in
src/: e_mod_config.c  e_mod_main.c  e_mod_main.h
